tests/success/default_value_record_variable.tig
let
	type record = {name: string, age: int}
	var a: record := f()
	function f(): record = a
in
	printi(a = nil)
end
