tests/fail/inter_declaration_group_mutual_recursive.tig
/*The Woman test*/

let
    type Woman = {beauty : int}
in
    let
        type Men = {wife : Woman}
	var a:= 1
        type Woman = {husband : Men}
    in
        2
    end
end
